2012-02-25  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (place-frames-from-xrandr)
	(swap-frame-geometry, rotate-frame-geometry): New helper functions
	for multiple physical screen.

2012-01-18  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/*.lisp: Use create-symbol and create-symbol-in-package
	instead of the shorter symb. (Thanks Aad Versteden).

	* src/bindings-second-mode.lisp (set-default-second-keys): New
	key binding to set window and frame transparency.

	* src/bindings.lisp (set-default-main-mouse): New mouse binding to
	set window and frame transparency.

	* src/clfswm-keys.lisp (define-keys): New macro to ease multiple
	keys definitions. (Thanks Valentin Plechinger for the request).

	* src/*.lisp: Add full transparency support with xcompmgr.

2012-01-14  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/*.lisp: Add transparency support.

2012-01-09  Ales Guzik <ales.guzik@gmail.com>

	* src/clfswm-layout.lisp (tile-layout-mix): New layout to
	automatically choose between vertival and horizontal tile layout.
	(tile-space-layout): Fix to have space between screen border and
	frame the same as between frames.

2012-01-04  Philippe Brochard  <pbrochard@common-lisp.net>

	* load.lisp: Support clisp 2.49+ module system to load CLX.

2012-01-04  Ales Guzik <ales.guzik@gmail.com>

	* src/clfswm-layout.lisp (update-layout-managed-children-keep-position):
	Fix an inattention error.

2012-01-04  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/xlib-util.lisp (with-xlib-protect): Protect from
	xlib:lookup-error. This prevent an error in clisp/new-clx when
	sometimes an xlib:colormap is expected instead of an xlib:window.

2012-01-03  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/xlib-util.lisp (handle-event): Fix a clisp/new-clx error
	when sometimes window slot of event-slots is a pixmap instead of a
	window.

2011-12-26  Philippe Brochard  <pbrochard@common-lisp.net>
